# test-cf-worker-rust

./: Cargo.toml  README.md  wrangler.toml
src/: lib.rs
