[package]
name = "test-cf-worker"
version = "0.0.0"
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.13"
serde_json = "1.0.67"

console_error_panic_hook = { version = "0.1.1", optional = true }
serde = { version = "1.0.160", features = ["derive"] }
leptos = { version = "0.2.5", default-features = false, features = [ "ssr" ] }

[profile.release]
opt-level = "s"
